<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2023. Hernán Rodríguez Garnica.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Título de la App -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_title"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Imagen del ticket -->
    <ImageView
        android:id="@+id/ivTicket"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ticket_image"
        android:scaleType="centerInside"
        android:src="@drawable/recibo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <!-- Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTicket">

        <!-- Cuerpo del ticket -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            tools:context=".MainActivity">

            <!-- Título del ticket -->
            <TextView
                android:id="@+id/tvTicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/ticket_data"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Imagen del ticket -->
            <ImageView
                android:id="@+id/ivBarcode"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:contentDescription="@string/barcode_image"
                android:scaleType="centerCrop"
                android:src="@drawable/barcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTicket" />


            <!-- Campo para el importe total de la comida -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTotalAmount"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBarcode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTotalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_total_amount"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Campo para el número de comensales -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumberOfPeople"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTotalAmount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumberOfPeople"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_number_of_people"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo para la propina -->
            <TextView
                android:id="@+id/tvTipLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tip_label"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilNumberOfPeople" />

            <RadioGroup
                android:id="@+id/rgTipOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTipLabel">

                <RadioButton
                    android:id="@+id/rbNoTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no_tip" />

                <RadioButton
                    android:id="@+id/rb5Percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_5_percent" />

                <RadioButton
                    android:id="@+id/rb10Percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_10_percent" />
            </RadioGroup>

            <!-- Botón para realizar el cálculo -->
            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgTipOptions" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Botón para limpiar los campos -->
    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_centerHorizontal="true"
        android:minHeight="48dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
