<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2023. Hernán Rodríguez Garnica.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Título de la App y Imagen del recibo -->
    <LinearLayout
        android:id="@+id/llTitleImageResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivReceiptResult"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/ticket_image"
            android:src="@drawable/recibo" />

        <TextView
            android:id="@+id/tvTitleResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- CardView para los resultados -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTitleImageResult"
        app:layout_constraintBottom_toTopOf="@+id/btnBack">

        <!-- Linear Layout Vertical -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Título del CardView -->
            <TextView
                android:id="@+id/tvCardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_card_title"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Imagen Barcode -->
            <ImageView
                android:id="@+id/ivBarcodeResult"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:contentDescription="@string/barcode_image"
                android:scaleType="centerCrop"
                android:src="@drawable/barcode" />

            <!-- Resultado de los parámetros -->
            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                tools:text="Resultado de prueba"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <!-- Botón para volver atrás -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
